# neuro_invasion_detector

./: .gitignore  README.md  main.py  pyproject.toml
models/Friday-WorkingHours-Afternoon-DDos.pcap_ISCX/: encoder.pkl  scaler.pkl
models/Friday-WorkingHours-Afternoon-PortScan.pcap_ISCX/: encoder.pkl  scaler.pkl
models/Friday-WorkingHours-Morning.pcap_ISCX/: encoder.pkl  scaler.pkl
models/Monday-WorkingHours.pcap_ISCX/: encoder.pkl  scaler.pkl
models/Thursday-WorkingHours-Afternoon-Infilteration.pcap_ISCX/: encoder.pkl  scaler.pkl
models/Thursday-WorkingHours-Morning-WebAttacks.pcap_ISCX/: encoder.pkl  scaler.pkl
models/Tuesday-WorkingHours.pcap_ISCX/: encoder.pkl  scaler.pkl
models/Wednesday-workingHours.pcap_ISCX/: encoder.pkl  scaler.pkl
project/: dataset_transform.py  df2018_to_2017.py  global_test.py  learning.py  main.py  model_generator.py  replace_label_marks.py  test_model.py  use_model.py
